--- a/JiaoBaoYun-hb/html/utils/customizeCity.html
+++ b/JiaoBaoYun-hb/html/utils/customizeCity.html
@@ -116,15 +116,18 @@
 			var commitCities = []; //提交的城市
 
 			mui.plusReady(function() {
-				//---滑动start---
-				mui(".mui-scroll-wrapper").scroll({
-					scrollY: true, //是否竖向滚动
-					scrollX: false, //是否横向滚动
-					indicators: true, //是否显示滚动条
-					deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
-					bounce: true, //是否启用回弹
-				});
-				//---滑动end---
+				var wd = events.showWaiting();
+				initData();
+				initListener();
+				initScroll();
+				//41.获取某个区域下的所有子区域或查询城市
+				requestAllCity(wd);
+			});
+
+			/**
+			 * 初始化数据
+			 */
+			function initData() {
 				main = plus.webview.currentWebview(); //获取当前窗体对象
 				cities = main.data.cities;
 				console.log('订制城市：' + JSON.stringify(main.data));
@@ -144,11 +147,12 @@
 				} else {
 					document.getElementById("title").innerText = '订制城市';
 				}
-				//41.获取某个区域下的所有子区域或查询城市
-				requestAllCity();
+			}
 
-				//---监听---start---
-
+			/**
+			 * 初始化监听
+			 */
+			function initListener() {
 				//点击城市
 				mui('#allCity').on('tap', '.mui-table-view-cell', function() {
 					var classNameArry = this.getAttribute('class').split(' ');
@@ -190,6 +194,7 @@
 					var tempCities = []; //选取的城市
 					commitCities = [];
 					var tempCityArray = cityArray;
+					var localCity=[];//存到本地的城市，游客使用
 					//获取被选中的元素
 					mui('.city-select').each(function(index, element) {
 						var elementAcode = element.getAttribute('data-acode'); //城市代码
@@ -198,6 +203,10 @@
 								tempCities.push(element2);
 								element2.index = commitCities.length;
 								commitCities.push(element2); //设置提交的城市
+								localCity.push({
+									acode:element2.acode,
+									aname:element2.aname
+								})
 								return false;
 							}
 						});
@@ -216,8 +225,24 @@
 							tempCities.splice(m, 1, tempStr1);
 							tempStr = tempCities.join('|');
 						}
-						//43.用户修改或添加区域阅读设置
-						requestCitySetting(tempStr);
+						if(!parseInt((window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid))) {
+							var citiesInfo = {
+								type: main.data.id,
+								cities: commitCities
+							};
+							//记录游客订制的城市
+							if(main.data.id == '0') { //科教
+								window.myStorage.setItem(window.storageKeyName.SECITY, localCity);
+							} else if(main.data.id == '1') { //展现
+								window.myStorage.setItem(window.storageKeyName.SHOWCITY, localCity);
+							}
+							events.fireToPageNone(main.data.webid, 'customizeCity', citiesInfo);
+							mui.toast('订制城市成功');
+							mui.back();
+						} else {
+							//43.用户修改或添加区域阅读设置
+							requestCitySetting(tempStr);
+						}
 					} else if(main.data.id == 'uarea') { //uarea账号地区
 						if(commitCities.length == 0 || commitCities[0].acode == tempInfo.uarea.acode) {
 							mui.back();
@@ -254,9 +279,20 @@
 						self.disabled = false;
 					}, 1500);
 				});
+			}
 
-				//---监听---end---
-			});
+			/**
+			 * 初始化滚动
+			 */
+			function initScroll() {
+				mui(".mui-scroll-wrapper").scroll({
+					scrollY: true, //是否竖向滚动
+					scrollX: false, //是否横向滚动
+					indicators: true, //是否显示滚动条
+					deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
+					bounce: true, //是否启用回弹
+				});
+			}
 
 			/**
 			 * 当前城市
@@ -290,17 +326,15 @@
 			}
 
 			//41.获取某个区域下的所有子区域或查询城市
-			function requestAllCity() {
+			function requestAllCity(wd) {
+				var wd = wd || events.showWaiting();
 				//所需参数
 				var comData = {
 					vtp: '3', //0(获取省份),1(获取城市),2(获取区县),3获取所有城市,4模糊查询城市
 					vvl: '' //查询的值(acode节点编码,查询所有省份或城市留空,模糊查询城市填写查询值)
 				};
-				// 等待的对话框
-				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 				//41.获取某个区域下的所有子区域或查询城市
 				postDataPro_PostArea(comData, wd, function(data) {
-					wd.close();
 					cityArray = data.RspData;
 					console.log('所有子区域或查询城市:' + JSON.stringify(data));
 					if(data.RspCode == 0) {
@@ -326,21 +360,20 @@
 					} else {
 						mui.toast(data.RspTxt);
 					}
+					wd.close();
 				});
 			}
 
 			//43.用户修改或添加区域阅读设置
 			function requestCitySetting(str) {
+				var wd = events.showWaiting();
 				//所需参数
 				var comData = {
 					vvl: str, //定制城市组合，城市代码_城市名称|城市代码_城市名称|.....
 					vvl1: main.data.id //定制城市频道,0科教频道,1展示频道,其他待定
 				};
-				// 等待的对话框
-				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 				//43.用户修改或添加区域阅读设置
 				postDataPro_PostUTcityA(comData, wd, function(data) {
-					wd.close();
 					console.log('用户修改或添加区域阅读设置:' + JSON.stringify(data));
 					if(data.RspCode == 0) {
 						var citiesInfo = {
@@ -353,24 +386,24 @@
 					} else {
 						mui.toast(data.RspTxt);
 					}
+					wd.close();
 				});
 			}
 
 			//6.用户修改各项用户信息
 			function uareaPostReUinf(vvl) {
+				var wd = events.showWaiting();
 				//所需参数
 				var comData = {
 					vtp: 'uarea', //uimg(头像),utxt(签名),unick(昵)称,usex(性别),uemail(邮件),uphone(手机绑定)uphoneq(手机解绑),uemailq(邮件解绑),uname(账号,只能修改一次,且只能字母开头,字母与数字,定了就不能修改),uarea(区域,值(省代码 市代码 区代码|省名称 市名称 区名称))
 					vvl: vvl //值(省代码 市代码 区代码|省名称 市名称 区名称)
-				};
-				// 等待的对话框
-				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				}
 				//6.用户修改各项用户信息
 				postDataPro_PostReUinf(comData, wd, function(data) {
 					console.log('6.用户修改各项用户信息success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 					if(data.RspCode == 0) {
 						mui.toast('修改成功');
-						var pInfo = myStorage.getItem(storageKeyName.PERSONALINFO);
+						var pInfo = myStorage.getItem(window.storageKeyName.PERSONALINFO);
 						//解析省市代码
 						var tempArray = vvl.split('|');
 						if(tempArray.length > 0) {
