--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -195,6 +195,7 @@
 			})
 			//个人信息改变
 			window.addEventListener('infoChanged', function() {
+				console.log("我的界面获取信息修改infoChanged");
 				getInfo()
 			})
 			//新消息数量改变
