标题栏再次修改

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -147,7 +147,7 @@
 				border-color: #E4E4E4;
 				margin-top: 5px;
 			}
-			.mui-bar-nav.mui-bar .mui-icon{
+			.mui-bar-nav.mui-bar .mui-icon.img-icon{
 				padding-top: 7px;
 			}
 		</style>
