--- a/JiaoBaoYun-hb/html/cloud/order-member.html
+++ b/JiaoBaoYun-hb/html/cloud/order-member.html
@@ -51,13 +51,28 @@
 							</div>
 						</div>
 						<div id="super-deal" class="mui-slider-item mui-control-content">
-							<div id="scroll2" class="mui-scroll-wrapper">
+							<!--<div id="scroll2" class="mui-scroll-wrapper">
 								<div class="mui-scroll">
 									<div class="mui-loading">
 										<div class="mui-spinner">
 										</div>
 									</div>
 								</div>
+							</div>-->
+							<div class="deal-container">
+								<div class="duration-price"><p class="duration-info display-inlineBlock">3个月</p><p class="price-info display-inlineBlock">￥15</p></div>
+								<div class="vertical-line"></div>
+								<input class="deal-button" type="button" value="开通" style="background-color: #12B7F5;color: white;" />
+							</div>
+							<div class="deal-container">
+								<div class="duration-price"><p class="duration-info display-inlineBlock">6个月</p><p class="price-info display-inlineBlock">￥27</p></div>
+								<div class="vertical-line"></div>
+								<input class="deal-button" type="button" value="开通" style="background-color: #12B7F5;color: white;" />
+							</div>
+							<div class="deal-container">
+								<div class="duration-price"><p class="duration-info display-inlineBlock">12个月</p><p class="price-info display-inlineBlock">￥52</p></div>
+								<div class="vertical-line"></div>
+								<input class="deal-button" type="button" value="开通" style="background-color: #12B7F5;color: white;" />
 							</div>
 
 						</div>
