--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -75,12 +75,7 @@
 		<script src="../../js/publicQiuzhiProtocol.js" type="text/javascript" charset="utf-8"></script>
 
 		<script type="text/javascript">
-			mui.init({
-				//				beforeback: function() {
-				//					document.getElementById("pictures").innerHTML = "";
-				//					return true;
-				//				}
-			});
+			mui.init();
 			//将传值到的标题显示
 			var askModel; //问题model
 			var answerInfo; //答案信息
