--- a/JiaoBaoYun-hb/html/cloud/member-pay.html
+++ b/JiaoBaoYun-hb/html/cloud/member-pay.html
@@ -45,9 +45,9 @@
 					<li class="mui-table-view-cell mui-selected">
 						<a class="mui-navigate-right"><span class="iconfont icon-zhifubao" style="color: #1296db;font-size:22px;padding-right: 5px;vertical-align: middle;"></span>支付宝支付</a>
 					</li>
-					<li class="mui-table-view-cell ">
+					<!--<li class="mui-table-view-cell ">
 						<a class="mui-navigate-right"><span class="iconfont icon-weixinzhifu" style="color: #1afa29;font-size:22px;padding-right: 5px;vertical-align: middle;"></span>微信支付</a>
-					</li>
+					</li>-->
 				</ul>
 				<button class="mui-btn mui-btn-primary" style="width: 90%;margin-left: 5%;margin-top: 20px; background-color: #1DB8F1;border: 0;">确认支付</button>
 			</div>
