--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -13,6 +13,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/utils/app-update.js" type="text/javascript" charset="utf-8"></script>
 
 		<script type="text/javascript">
 			mui.init({
@@ -68,6 +69,8 @@
 					console.log("自动登录获取的值1111：" + JSON.stringify(data));
 					if(data.value == 1) {
 						events.openNewWindow('index.html');
+						//判断是否需要更新
+						setTimeout(appUpdate.updateApp, 5000);
 					} else if(data.value == -1) { //登录失败,用游客登录
 						defalutPerson();
 						events.defaultLogin(function(data) {
