Revert "换个页面试试"
This reverts commit 557b4e196ee87ffb8bdeff6ff93e375e6ec7fcae.

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -29,7 +29,7 @@
 
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav id="nav_tab" class="mui-bar mui-bar-tab">
-			<a id="defaultTab" class="mui-tab-item mui-active" style="display: none;" href="../cloud/app_keeprecord.html">
+			<a id="defaultTab" class="mui-tab-item mui-active" style="display: none;" href="../cloud/cloud_home.html">
 				<span class="mui-icon iconfont icon-yunpan1"></span>
 				<span class="mui-tab-label">云盘</span>
 			</a>
