--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -20,43 +20,43 @@
 			.mui-content {
 				background-color: #f2f3f5;
 			}
-			
+
 			#topPopover {
 				position: fixed;
 				top: 46px;
 				right: 6px;
 				width: 150px;
 			}
-			
+
 			#topPopover .mui-popover-arrow {
 				left: auto;
 				right: 6px;
 			}
-			
+
 			.mui-popover {
 				height: 80px;
 				width: 150;
 			}
-			
+
 			.mui-backdrop {
 				/*选择排序的遮罩*/
 				background-color: rgba(0, 0, 0, .05);
 			}
-			
+
 			#refreshContainer .mui-table-view:before,
 			#refreshContainer .mui-table-view:after,
 			#refreshContainer .mui-table-view-cell:after {
 				height: 0px;
 			}
-			
+
 			#refreshContainer .mui-table-view {
 				background-color: white;
 			}
-			
+
 			.cloud-item {
 				background-color: white;
 			}
-			
+
 			.cloud-item-left {
 				width: 16%;
 				border-right: 1px solid #D9D9D9;
@@ -65,7 +65,7 @@
 				font-weight: bold;
 				font-size: 1.6rem;
 			}
-			
+
 			.cloud-item-right {
 				/*margin-left: 16%;*/
 				width: 84%;
@@ -83,27 +83,27 @@
 			/*每一项的第二行*/
 			/*background-color: blue;*/
 			/*}*/
-			
+
 			.mui-plus-pullrefresh .mui-scroll {
 				position: absolute;
 				/*width: 100%;*/
 			}
-			
+
 			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
 				color: black;
 				border: none;
 			}
-			
+
 			#refreshContainer .mui-table-view-cell {
 				display: inline-block;
 				width: auto;
 				padding: 1px 1px;
 			}
-			
+
 			.mui-slider-indicator .mui-table-view-cell.mui-active {
 				background: white;
 			}
-			
+
 			.cloud-red-point {
 				position: absolute;
 				background: red;
@@ -112,27 +112,27 @@
 				border-radius: 50%;
 				display: none;
 			}
-			
+
 			img {
 				border-radius: 50%;
 			}
-			
+
 			#cloudstorage_1 img {
 				border-radius: 0px;
 			}
-			
+
 			.icon-jiaxiabiao {
 				color: #0ABAF5;
 			}
-			
+
 			.icon-banxiabiao {
 				color: #FFBA00;
 			}
-			
+
 			.icon-re {
 				color: #FD681E;
 			}
-			
+
 			.icon-re,
 			.icon-banxiabiao,
 			.icon-jiaxiabiao {
@@ -140,14 +140,15 @@
 				border: none !important;
 				top: 0px;
 			}
-			
+
 			.mui-popup-input input {
 				/*popup 输入框*/
 				height: 34px;
 				border-color: #E4E4E4;
 				margin-top: 5px;
 			}
-			.mui-bar-nav.mui-bar .mui-icon.img-icon{
+
+			.mui-bar-nav.mui-bar .mui-icon.img-icon {
 				padding-top: 7px;
 			}
 		</style>
@@ -265,11 +266,8 @@
 
 				//每一行的高度
 				cloudItemHeight = (webHeight * 1 - (webHeight * 0.015 * 4)) / (cloudFirst + cloudSecond + cloudThird);
-				//左侧文字宽度
-				var nameWidth = document.getElementById("cloudstoragename").offsetWidth;
-				//console.log('nameWidth:' + nameWidth);
 				//每个图标的宽度
-				maxWidth = parseInt((screenWidth * 1 - nameWidth * 1 - 5) / 4.5);
+				maxWidth = parseInt((screenWidth * 1 - screenWidth * 0.16 - 5) / 4.5);
 
 				initStyle = parseInt(maxWidth * imgeWith);
 
@@ -352,18 +350,21 @@
 				}
 			});
 			mui.plusReady(function() {
+				//发送协议
+				changeData();
+
+				addcloudapps_0(); //应用
 				slideNavigation.add('../index/mine.html', 200);
 				//				setIcons();
-				document.querySelector(".img-icon>img").src=updateHeadImg(myStorage.getItem(storageKeyName.PERSONALINFO).uimg,2);
-				changeData();
-				addcloudapps_0(); //应用
+				document.querySelector(".img-icon>img").src = updateHeadImg(myStorage.getItem(storageKeyName.PERSONALINFO).uimg, 2);
+
 				document.querySelector(".img-icon").addEventListener("tap", function() {
 					if(slideNavigation.showMenu) {
 						slideNavigation.closeMenu();
 					} else {
-//						events.fireToPageWithData('../cloud/cloud_home.html', 'topPopover', {
-//							flag: 1
-//						})
+						//						events.fireToPageWithData('../cloud/cloud_home.html', 'topPopover', {
+						//							flag: 1
+						//						})
 						slideNavigation.openMenu();
 					}
 				})
